@@ -5,6 +5,7 @@ mailscripts (0.12-1) UNRELEASED; urgency=medium
   * email-print-mime-structure: add capability to decrypt message parts
     (Closes: #943959).
     Thanks to Daniel Kahn Gillmor for the patch series.
+  * mailscripts.el: add mailscripts-extract-patches-branch-prefix defcustom.
 
  -- Sean Whitton <spwhitton@spwhitton.name>  Fri, 01 Nov 2019 20:38:07 -0700
 
